# stepscope

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: langgraph_broken_agent.py  raw_api_minimal.py
stepscope/: __init__.py  _config.py  _funnel.py  _ids.py  cli.py  langchain.py  sqlite_buffer.py  step.py
tests/: test_cli_funnel.py  test_langchain_callback.py  test_sqlite_buffer.py  test_step.py
