[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stepscope"
version = "0.0.1a0"
description = "Funnel analytics for AI agents — see where conversations drop off."
readme = "README.md"
license = "MIT"
authors = [{ name = "Jason Luo", email = "jluo6200@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3,<0.4", "langgraph>=0.2,<0.3"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[project.scripts]
stepscope = "stepscope.cli:app"

[project.urls]
Homepage = "https://github.com/luoojason/stepscope"
Issues   = "https://github.com/luoojason/stepscope/issues"
